tests/NormalTests/paczka1/fuzzy1/27548636.err
Error in line 7: OeDvqyP S769 25,9
Error in line 16: A921 A921 63,82
Error in line 24: A921 A921 262,79
Error in line 25: xiW A584 405,7
Error in line 27: xiW A910 36,0
Error in line 28: xiW S769 93,7
Error in line 14: 2TrcOq0JI A910 26,6
Error in line 33: FJLWsZ8vJFC S769 34,1
